[tool.poetry]
name = "neurotechx"
version = "0.1.0"
description = ""
authors = ["Shannah <shannah.santucci@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
keras = "^2.10.0"
jupyterlab = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
