[tool.poetry]
name = "neurotechx"
version = "0.1.0"
description = ""
authors = ["Shannah <shannah.santucci@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
keras = "^2.10.0"
jupyterlab = "^3.5.0"
matplotlib = "^3.6.1"
pyxdf = "^1.16.3"
tensorflow-macos = {version = "^2.10.0", platform = "macos"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
