[tool.poetry]
name = "neurotechx"
version = "0.1.0"
description = ""
authors = ["Shannah <shannah.santucci@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
keras = "^2.10.0"
jupyterlab = "^3.5.0"
matplotlib = "^3.6.1"
pyxdf = "^1.16.3"
pyOpenBCI = "^0.13"
pylsl = "^1.16.0"
pyserial = "^3.5"
xmltodict = "^0.13.0"
brainflow = "^5.3.0"
pandas = "^1.5.1"
tk = "^0.1.0"
Flask = "^2.2.2"
mido = "^1.2.10"
Turbo-Flask = "^0.8.3"
rtmidi = "^2.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
